Update Dockerfile and action to Java 21